// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Molecules/Button passes the snapshot test for basic setup 1`] = `
<View
  accessibilityHint=""
  accessibilityLabel="Button press"
  accessibilityRole="button"
  accessibilityState={
    Object {
      "busy": false,
      "disabled": false,
    }
  }
  accessible={true}
  onLayout={[Function]}
  style={
    Object {
      "alignSelf": "flex-start",
      "borderRadius": undefined,
      "bottom": undefined,
      "display": "flex",
      "elevation": undefined,
      "end": undefined,
      "left": undefined,
      "margin": undefined,
      "marginBottom": undefined,
      "marginEnd": undefined,
      "marginHorizontal": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginStart": undefined,
      "marginTop": undefined,
      "marginVertical": 4,
      "position": undefined,
      "right": undefined,
      "shadowColor": undefined,
      "shadowOffset": undefined,
      "shadowOpacity": undefined,
      "shadowRadius": undefined,
      "start": undefined,
      "top": undefined,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "borderRadius": 8,
        "display": "flex",
        "overflow": "hidden",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "activeBackgroundColor": "#8F9DFF",
            "alignItems": "center",
            "backgroundColor": "#6A7BFF",
            "borderRadius": 8,
            "display": "flex",
            "justifyContent": "center",
            "opacity": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 12,
          },
          Object {
            "backgroundColor": "#6A7BFF",
            "borderBottomColor": undefined,
            "borderBottomWidth": undefined,
            "borderColor": undefined,
            "borderEndColor": undefined,
            "borderEndWidth": undefined,
            "borderLeftColor": undefined,
            "borderLeftWidth": undefined,
            "borderRightColor": undefined,
            "borderRightWidth": undefined,
            "borderStartColor": undefined,
            "borderStartWidth": undefined,
            "borderStyle": undefined,
            "borderTopColor": undefined,
            "borderTopWidth": undefined,
            "borderWidth": undefined,
            "opacity": 1,
          },
        ]
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        style={
          Object {
            "color": "#FFFFFF",
            "display": "flex",
            "fontFamily": "Poppins-Medium",
            "fontSize": 16.099999999999998,
            "fontWeight": "500",
            "lineHeight": 21.849999999999998,
          }
        }
        variant="btn2"
      >
        Button press
      </Text>
    </View>
  </View>
</View>
`;

exports[`Molecules/Button passes the snapshot test for different color schemes 1`] = `
Array [
  <View
    accessibilityHint=""
    accessibilityLabel="Primary button"
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": false,
      }
    }
    accessible={true}
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "flex-start",
        "borderRadius": undefined,
        "bottom": undefined,
        "display": "flex",
        "elevation": undefined,
        "end": undefined,
        "left": undefined,
        "margin": undefined,
        "marginBottom": undefined,
        "marginEnd": undefined,
        "marginHorizontal": undefined,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginStart": undefined,
        "marginTop": undefined,
        "marginVertical": 4,
        "position": undefined,
        "right": undefined,
        "shadowColor": undefined,
        "shadowOffset": undefined,
        "shadowOpacity": undefined,
        "shadowRadius": undefined,
        "start": undefined,
        "top": undefined,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "borderRadius": 8,
          "display": "flex",
          "overflow": "hidden",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "activeBackgroundColor": "#8F9DFF",
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 8,
              "display": "flex",
              "justifyContent": "center",
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 12,
            },
            Object {
              "backgroundColor": "#6A7BFF",
              "borderBottomColor": undefined,
              "borderBottomWidth": undefined,
              "borderColor": undefined,
              "borderEndColor": undefined,
              "borderEndWidth": undefined,
              "borderLeftColor": undefined,
              "borderLeftWidth": undefined,
              "borderRightColor": undefined,
              "borderRightWidth": undefined,
              "borderStartColor": undefined,
              "borderStartWidth": undefined,
              "borderStyle": undefined,
              "borderTopColor": undefined,
              "borderTopWidth": undefined,
              "borderWidth": undefined,
              "opacity": 1,
            },
          ]
        }
      >
        <Text
          accessibilityRole="text"
          accessible={true}
          allowFontScaling={true}
          style={
            Object {
              "color": "#FFFFFF",
              "display": "flex",
              "fontFamily": "Poppins-Medium",
              "fontSize": 16.099999999999998,
              "fontWeight": "500",
              "lineHeight": 21.849999999999998,
            }
          }
          variant="btn2"
        >
          Primary button
        </Text>
      </View>
    </View>
  </View>,
  <View
    accessibilityHint=""
    accessibilityLabel="Secondary button"
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": false,
      }
    }
    accessible={true}
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "flex-start",
        "borderRadius": undefined,
        "bottom": undefined,
        "display": "flex",
        "elevation": undefined,
        "end": undefined,
        "left": undefined,
        "margin": undefined,
        "marginBottom": undefined,
        "marginEnd": undefined,
        "marginHorizontal": undefined,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginStart": undefined,
        "marginTop": undefined,
        "marginVertical": 4,
        "position": undefined,
        "right": undefined,
        "shadowColor": undefined,
        "shadowOffset": undefined,
        "shadowOpacity": undefined,
        "shadowRadius": undefined,
        "start": undefined,
        "top": undefined,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "borderRadius": 8,
          "display": "flex",
          "overflow": "hidden",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "activeBackgroundColor": "#FF8FC9",
              "alignItems": "center",
              "backgroundColor": "#FF6AC6",
              "borderRadius": 8,
              "display": "flex",
              "justifyContent": "center",
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 12,
            },
            Object {
              "backgroundColor": "#FF6AC6",
              "borderBottomColor": undefined,
              "borderBottomWidth": undefined,
              "borderColor": undefined,
              "borderEndColor": undefined,
              "borderEndWidth": undefined,
              "borderLeftColor": undefined,
              "borderLeftWidth": undefined,
              "borderRightColor": undefined,
              "borderRightWidth": undefined,
              "borderStartColor": undefined,
              "borderStartWidth": undefined,
              "borderStyle": undefined,
              "borderTopColor": undefined,
              "borderTopWidth": undefined,
              "borderWidth": undefined,
              "opacity": 1,
            },
          ]
        }
      >
        <Text
          accessibilityRole="text"
          accessible={true}
          allowFontScaling={true}
          style={
            Object {
              "color": "#FFFFFF",
              "display": "flex",
              "fontFamily": "Poppins-Medium",
              "fontSize": 16.099999999999998,
              "fontWeight": "500",
              "lineHeight": 21.849999999999998,
            }
          }
          variant="btn2"
        >
          Secondary button
        </Text>
      </View>
    </View>
  </View>,
]
`;

exports[`Molecules/Button passes the snapshot test for different icons 1`] = `
Array [
  <View
    accessibilityHint=""
    accessibilityLabel="Button with left icon"
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": false,
      }
    }
    accessible={true}
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "flex-start",
        "borderRadius": undefined,
        "bottom": undefined,
        "display": "flex",
        "elevation": undefined,
        "end": undefined,
        "left": undefined,
        "margin": undefined,
        "marginBottom": undefined,
        "marginEnd": undefined,
        "marginHorizontal": undefined,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginStart": undefined,
        "marginTop": undefined,
        "marginVertical": 4,
        "position": undefined,
        "right": undefined,
        "shadowColor": undefined,
        "shadowOffset": undefined,
        "shadowOpacity": undefined,
        "shadowRadius": undefined,
        "start": undefined,
        "top": undefined,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "borderRadius": 8,
          "display": "flex",
          "overflow": "hidden",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "activeBackgroundColor": "#8F9DFF",
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 8,
              "display": "flex",
              "justifyContent": "center",
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 12,
            },
            Object {
              "backgroundColor": "#6A7BFF",
              "borderBottomColor": undefined,
              "borderBottomWidth": undefined,
              "borderColor": undefined,
              "borderEndColor": undefined,
              "borderEndWidth": undefined,
              "borderLeftColor": undefined,
              "borderLeftWidth": undefined,
              "borderRightColor": undefined,
              "borderRightWidth": undefined,
              "borderStartColor": undefined,
              "borderStartWidth": undefined,
              "borderStyle": undefined,
              "borderTopColor": undefined,
              "borderTopWidth": undefined,
              "borderWidth": undefined,
              "opacity": 1,
            },
          ]
        }
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "borderRadius": undefined,
              "display": "flex",
              "flexDirection": "row",
            }
          }
        >
          <Text />
          <Text
            accessibilityRole="text"
            accessible={true}
            allowFontScaling={true}
            style={
              Object {
                "color": "#FFFFFF",
                "display": "flex",
                "fontFamily": "Poppins-Medium",
                "fontSize": 16.099999999999998,
                "fontWeight": "500",
                "lineHeight": 21.849999999999998,
              }
            }
            variant="btn2"
          >
            Button with left icon
          </Text>
        </View>
      </View>
    </View>
  </View>,
  <View
    accessibilityHint=""
    accessibilityLabel="Button with right icon"
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": false,
      }
    }
    accessible={true}
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "flex-start",
        "borderRadius": undefined,
        "bottom": undefined,
        "display": "flex",
        "elevation": undefined,
        "end": undefined,
        "left": undefined,
        "margin": undefined,
        "marginBottom": undefined,
        "marginEnd": undefined,
        "marginHorizontal": undefined,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginStart": undefined,
        "marginTop": undefined,
        "marginVertical": 4,
        "position": undefined,
        "right": undefined,
        "shadowColor": undefined,
        "shadowOffset": undefined,
        "shadowOpacity": undefined,
        "shadowRadius": undefined,
        "start": undefined,
        "top": undefined,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "borderRadius": 8,
          "display": "flex",
          "overflow": "hidden",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "activeBackgroundColor": "#F0F2FF",
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "borderRadius": 8,
              "display": "flex",
              "justifyContent": "center",
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 12,
            },
            Object {
              "backgroundColor": "#FFFFFF",
              "borderBottomColor": undefined,
              "borderBottomWidth": undefined,
              "borderColor": "#6A7BFF",
              "borderEndColor": undefined,
              "borderEndWidth": undefined,
              "borderLeftColor": undefined,
              "borderLeftWidth": undefined,
              "borderRightColor": undefined,
              "borderRightWidth": undefined,
              "borderStartColor": undefined,
              "borderStartWidth": undefined,
              "borderStyle": undefined,
              "borderTopColor": undefined,
              "borderTopWidth": undefined,
              "borderWidth": 1,
              "opacity": 1,
            },
          ]
        }
        variant="outline"
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "borderRadius": undefined,
              "display": "flex",
              "flexDirection": "row",
            }
          }
        >
          <Text
            accessibilityRole="text"
            accessible={true}
            allowFontScaling={true}
            style={
              Object {
                "color": "#6A7BFF",
                "display": "flex",
                "fontFamily": "Poppins-Medium",
                "fontSize": 16.099999999999998,
                "fontWeight": "500",
                "lineHeight": 21.849999999999998,
              }
            }
            variant="btn2"
          >
            Button with right icon
          </Text>
          <Text />
        </View>
      </View>
    </View>
  </View>,
]
`;

exports[`Molecules/Button passes the snapshot test for different sizes 1`] = `
Array [
  <View
    accessibilityHint=""
    accessibilityLabel="Button press"
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": false,
      }
    }
    accessible={true}
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "flex-start",
        "borderRadius": undefined,
        "bottom": undefined,
        "display": "flex",
        "elevation": undefined,
        "end": undefined,
        "left": undefined,
        "margin": undefined,
        "marginBottom": undefined,
        "marginEnd": undefined,
        "marginHorizontal": undefined,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginStart": undefined,
        "marginTop": undefined,
        "marginVertical": 4,
        "position": undefined,
        "right": undefined,
        "shadowColor": undefined,
        "shadowOffset": undefined,
        "shadowOpacity": undefined,
        "shadowRadius": undefined,
        "start": undefined,
        "top": undefined,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "borderRadius": 4,
          "display": "flex",
          "overflow": "hidden",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        size="xs"
        style={
          Array [
            Object {
              "activeBackgroundColor": "#8F9DFF",
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 4,
              "display": "flex",
              "justifyContent": "center",
              "opacity": 1,
              "paddingHorizontal": 8,
              "paddingVertical": 4,
            },
            Object {
              "backgroundColor": "#6A7BFF",
              "borderBottomColor": undefined,
              "borderBottomWidth": undefined,
              "borderColor": undefined,
              "borderEndColor": undefined,
              "borderEndWidth": undefined,
              "borderLeftColor": undefined,
              "borderLeftWidth": undefined,
              "borderRightColor": undefined,
              "borderRightWidth": undefined,
              "borderStartColor": undefined,
              "borderStartWidth": undefined,
              "borderStyle": undefined,
              "borderTopColor": undefined,
              "borderTopWidth": undefined,
              "borderWidth": undefined,
              "opacity": 1,
            },
          ]
        }
      >
        <Text
          accessibilityRole="text"
          accessible={true}
          allowFontScaling={true}
          style={
            Object {
              "color": "#FFFFFF",
              "display": "flex",
              "fontFamily": "Poppins-Medium",
              "fontSize": 11.5,
              "fontWeight": "500",
              "lineHeight": 16.099999999999998,
            }
          }
          variant="btn4"
        >
          Button press
        </Text>
      </View>
    </View>
  </View>,
  <View
    accessibilityHint=""
    accessibilityLabel="Button press"
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": false,
      }
    }
    accessible={true}
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "flex-start",
        "borderRadius": undefined,
        "bottom": undefined,
        "display": "flex",
        "elevation": undefined,
        "end": undefined,
        "left": undefined,
        "margin": undefined,
        "marginBottom": undefined,
        "marginEnd": undefined,
        "marginHorizontal": undefined,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginStart": undefined,
        "marginTop": undefined,
        "marginVertical": 4,
        "position": undefined,
        "right": undefined,
        "shadowColor": undefined,
        "shadowOffset": undefined,
        "shadowOpacity": undefined,
        "shadowRadius": undefined,
        "start": undefined,
        "top": undefined,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "borderRadius": 4,
          "display": "flex",
          "overflow": "hidden",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        size="s"
        style={
          Array [
            Object {
              "activeBackgroundColor": "#8F9DFF",
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 4,
              "display": "flex",
              "justifyContent": "center",
              "opacity": 1,
              "paddingHorizontal": 8,
              "paddingVertical": 8,
            },
            Object {
              "backgroundColor": "#6A7BFF",
              "borderBottomColor": undefined,
              "borderBottomWidth": undefined,
              "borderColor": undefined,
              "borderEndColor": undefined,
              "borderEndWidth": undefined,
              "borderLeftColor": undefined,
              "borderLeftWidth": undefined,
              "borderRightColor": undefined,
              "borderRightWidth": undefined,
              "borderStartColor": undefined,
              "borderStartWidth": undefined,
              "borderStyle": undefined,
              "borderTopColor": undefined,
              "borderTopWidth": undefined,
              "borderWidth": undefined,
              "opacity": 1,
            },
          ]
        }
      >
        <Text
          accessibilityRole="text"
          accessible={true}
          allowFontScaling={true}
          style={
            Object {
              "color": "#FFFFFF",
              "display": "flex",
              "fontFamily": "Poppins-Medium",
              "fontSize": 13.799999999999999,
              "fontWeight": "500",
              "lineHeight": 18.4,
            }
          }
          variant="btn3"
        >
          Button press
        </Text>
      </View>
    </View>
  </View>,
  <View
    accessibilityHint=""
    accessibilityLabel="Button press"
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": false,
      }
    }
    accessible={true}
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "flex-start",
        "borderRadius": undefined,
        "bottom": undefined,
        "display": "flex",
        "elevation": undefined,
        "end": undefined,
        "left": undefined,
        "margin": undefined,
        "marginBottom": undefined,
        "marginEnd": undefined,
        "marginHorizontal": undefined,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginStart": undefined,
        "marginTop": undefined,
        "marginVertical": 4,
        "position": undefined,
        "right": undefined,
        "shadowColor": undefined,
        "shadowOffset": undefined,
        "shadowOpacity": undefined,
        "shadowRadius": undefined,
        "start": undefined,
        "top": undefined,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "borderRadius": 8,
          "display": "flex",
          "overflow": "hidden",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        size="m"
        style={
          Array [
            Object {
              "activeBackgroundColor": "#8F9DFF",
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 8,
              "display": "flex",
              "justifyContent": "center",
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 12,
            },
            Object {
              "backgroundColor": "#6A7BFF",
              "borderBottomColor": undefined,
              "borderBottomWidth": undefined,
              "borderColor": undefined,
              "borderEndColor": undefined,
              "borderEndWidth": undefined,
              "borderLeftColor": undefined,
              "borderLeftWidth": undefined,
              "borderRightColor": undefined,
              "borderRightWidth": undefined,
              "borderStartColor": undefined,
              "borderStartWidth": undefined,
              "borderStyle": undefined,
              "borderTopColor": undefined,
              "borderTopWidth": undefined,
              "borderWidth": undefined,
              "opacity": 1,
            },
          ]
        }
      >
        <Text
          accessibilityRole="text"
          accessible={true}
          allowFontScaling={true}
          style={
            Object {
              "color": "#FFFFFF",
              "display": "flex",
              "fontFamily": "Poppins-Medium",
              "fontSize": 16.099999999999998,
              "fontWeight": "500",
              "lineHeight": 21.849999999999998,
            }
          }
          variant="btn2"
        >
          Button press
        </Text>
      </View>
    </View>
  </View>,
  <View
    accessibilityHint=""
    accessibilityLabel="Button press"
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": false,
      }
    }
    accessible={true}
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "flex-start",
        "borderRadius": undefined,
        "bottom": undefined,
        "display": "flex",
        "elevation": undefined,
        "end": undefined,
        "left": undefined,
        "margin": undefined,
        "marginBottom": undefined,
        "marginEnd": undefined,
        "marginHorizontal": undefined,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginStart": undefined,
        "marginTop": undefined,
        "marginVertical": 4,
        "position": undefined,
        "right": undefined,
        "shadowColor": undefined,
        "shadowOffset": undefined,
        "shadowOpacity": undefined,
        "shadowRadius": undefined,
        "start": undefined,
        "top": undefined,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "borderRadius": 8,
          "display": "flex",
          "overflow": "hidden",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        size="l"
        style={
          Array [
            Object {
              "activeBackgroundColor": "#8F9DFF",
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 8,
              "display": "flex",
              "justifyContent": "center",
              "opacity": 1,
              "paddingHorizontal": 16,
              "paddingVertical": 16,
            },
            Object {
              "backgroundColor": "#6A7BFF",
              "borderBottomColor": undefined,
              "borderBottomWidth": undefined,
              "borderColor": undefined,
              "borderEndColor": undefined,
              "borderEndWidth": undefined,
              "borderLeftColor": undefined,
              "borderLeftWidth": undefined,
              "borderRightColor": undefined,
              "borderRightWidth": undefined,
              "borderStartColor": undefined,
              "borderStartWidth": undefined,
              "borderStyle": undefined,
              "borderTopColor": undefined,
              "borderTopWidth": undefined,
              "borderWidth": undefined,
              "opacity": 1,
            },
          ]
        }
      >
        <Text
          accessibilityRole="text"
          accessible={true}
          allowFontScaling={true}
          style={
            Object {
              "color": "#FFFFFF",
              "display": "flex",
              "fontFamily": "Poppins-Medium",
              "fontSize": 18.4,
              "fontWeight": "500",
              "lineHeight": 24.15,
            }
          }
          variant="btn1"
        >
          Button press
        </Text>
      </View>
    </View>
  </View>,
]
`;

exports[`Molecules/Button passes the snapshot test for different variants 1`] = `
Array [
  <View
    accessibilityHint=""
    accessibilityLabel="Button press"
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": false,
      }
    }
    accessible={true}
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "flex-start",
        "borderRadius": undefined,
        "bottom": undefined,
        "display": "flex",
        "elevation": undefined,
        "end": undefined,
        "left": undefined,
        "margin": undefined,
        "marginBottom": undefined,
        "marginEnd": undefined,
        "marginHorizontal": undefined,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginStart": undefined,
        "marginTop": undefined,
        "marginVertical": 4,
        "position": undefined,
        "right": undefined,
        "shadowColor": undefined,
        "shadowOffset": undefined,
        "shadowOpacity": undefined,
        "shadowRadius": undefined,
        "start": undefined,
        "top": undefined,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "borderRadius": 8,
          "display": "flex",
          "overflow": "hidden",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "activeBackgroundColor": "#8F9DFF",
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 8,
              "display": "flex",
              "justifyContent": "center",
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 12,
            },
            Object {
              "backgroundColor": "#6A7BFF",
              "borderBottomColor": undefined,
              "borderBottomWidth": undefined,
              "borderColor": undefined,
              "borderEndColor": undefined,
              "borderEndWidth": undefined,
              "borderLeftColor": undefined,
              "borderLeftWidth": undefined,
              "borderRightColor": undefined,
              "borderRightWidth": undefined,
              "borderStartColor": undefined,
              "borderStartWidth": undefined,
              "borderStyle": undefined,
              "borderTopColor": undefined,
              "borderTopWidth": undefined,
              "borderWidth": undefined,
              "opacity": 1,
            },
          ]
        }
        variant="filled"
      >
        <Text
          accessibilityRole="text"
          accessible={true}
          allowFontScaling={true}
          style={
            Object {
              "color": "#FFFFFF",
              "display": "flex",
              "fontFamily": "Poppins-Medium",
              "fontSize": 16.099999999999998,
              "fontWeight": "500",
              "lineHeight": 21.849999999999998,
            }
          }
          variant="btn2"
        >
          Button press
        </Text>
      </View>
    </View>
  </View>,
  <View
    accessibilityHint=""
    accessibilityLabel="Button press"
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": false,
      }
    }
    accessible={true}
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "flex-start",
        "borderRadius": undefined,
        "bottom": undefined,
        "display": "flex",
        "elevation": undefined,
        "end": undefined,
        "left": undefined,
        "margin": undefined,
        "marginBottom": undefined,
        "marginEnd": undefined,
        "marginHorizontal": undefined,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginStart": undefined,
        "marginTop": undefined,
        "marginVertical": 4,
        "position": undefined,
        "right": undefined,
        "shadowColor": undefined,
        "shadowOffset": undefined,
        "shadowOpacity": undefined,
        "shadowRadius": undefined,
        "start": undefined,
        "top": undefined,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "borderRadius": 8,
          "display": "flex",
          "overflow": "hidden",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "activeBackgroundColor": "#F0F2FF",
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "borderRadius": 8,
              "display": "flex",
              "justifyContent": "center",
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 12,
            },
            Object {
              "backgroundColor": "#FFFFFF",
              "borderBottomColor": undefined,
              "borderBottomWidth": undefined,
              "borderColor": "#6A7BFF",
              "borderEndColor": undefined,
              "borderEndWidth": undefined,
              "borderLeftColor": undefined,
              "borderLeftWidth": undefined,
              "borderRightColor": undefined,
              "borderRightWidth": undefined,
              "borderStartColor": undefined,
              "borderStartWidth": undefined,
              "borderStyle": undefined,
              "borderTopColor": undefined,
              "borderTopWidth": undefined,
              "borderWidth": 1,
              "opacity": 1,
            },
          ]
        }
        variant="outline"
      >
        <Text
          accessibilityRole="text"
          accessible={true}
          allowFontScaling={true}
          style={
            Object {
              "color": "#6A7BFF",
              "display": "flex",
              "fontFamily": "Poppins-Medium",
              "fontSize": 16.099999999999998,
              "fontWeight": "500",
              "lineHeight": 21.849999999999998,
            }
          }
          variant="btn2"
        >
          Button press
        </Text>
      </View>
    </View>
  </View>,
  <View
    accessibilityHint=""
    accessibilityLabel="Button press"
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": false,
        "disabled": false,
      }
    }
    accessible={true}
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "flex-start",
        "borderRadius": undefined,
        "bottom": undefined,
        "display": "flex",
        "elevation": undefined,
        "end": undefined,
        "left": undefined,
        "margin": undefined,
        "marginBottom": undefined,
        "marginEnd": undefined,
        "marginHorizontal": undefined,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginStart": undefined,
        "marginTop": undefined,
        "marginVertical": 4,
        "position": undefined,
        "right": undefined,
        "shadowColor": undefined,
        "shadowOffset": undefined,
        "shadowOpacity": undefined,
        "shadowRadius": undefined,
        "start": undefined,
        "top": undefined,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "borderRadius": 8,
          "display": "flex",
          "overflow": "hidden",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "activeBackgroundColor": "#F0F2FF",
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "borderRadius": 8,
              "display": "flex",
              "justifyContent": "center",
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 12,
            },
            Object {
              "backgroundColor": "#FFFFFF",
              "borderBottomColor": undefined,
              "borderBottomWidth": undefined,
              "borderColor": undefined,
              "borderEndColor": undefined,
              "borderEndWidth": undefined,
              "borderLeftColor": undefined,
              "borderLeftWidth": undefined,
              "borderRightColor": undefined,
              "borderRightWidth": undefined,
              "borderStartColor": undefined,
              "borderStartWidth": undefined,
              "borderStyle": undefined,
              "borderTopColor": undefined,
              "borderTopWidth": undefined,
              "borderWidth": undefined,
              "opacity": 1,
            },
          ]
        }
        variant="ghost"
      >
        <Text
          accessibilityRole="text"
          accessible={true}
          allowFontScaling={true}
          style={
            Object {
              "color": "#6A7BFF",
              "display": "flex",
              "fontFamily": "Poppins-Medium",
              "fontSize": 16.099999999999998,
              "fontWeight": "500",
              "lineHeight": 21.849999999999998,
            }
          }
          variant="btn2"
        >
          Button press
        </Text>
      </View>
    </View>
  </View>,
]
`;

exports[`Molecules/Button passes the snapshot test for loading state 1`] = `
Array [
  <View
    accessibilityHint=""
    accessibilityLabel="Loading"
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": true,
        "disabled": false,
      }
    }
    accessible={true}
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "flex-start",
        "borderRadius": undefined,
        "bottom": undefined,
        "display": "flex",
        "elevation": undefined,
        "end": undefined,
        "left": undefined,
        "margin": undefined,
        "marginBottom": undefined,
        "marginEnd": undefined,
        "marginHorizontal": undefined,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginStart": undefined,
        "marginTop": undefined,
        "marginVertical": 4,
        "position": undefined,
        "right": undefined,
        "shadowColor": undefined,
        "shadowOffset": undefined,
        "shadowOpacity": undefined,
        "shadowRadius": undefined,
        "start": undefined,
        "top": undefined,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "borderRadius": 8,
          "display": "flex",
          "overflow": "hidden",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "activeBackgroundColor": "#8F9DFF",
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 8,
              "display": "flex",
              "justifyContent": "center",
              "opacity": 0.5,
              "paddingHorizontal": 12,
              "paddingVertical": 12,
            },
            Object {
              "backgroundColor": "#6A7BFF",
              "borderBottomColor": undefined,
              "borderBottomWidth": undefined,
              "borderColor": undefined,
              "borderEndColor": undefined,
              "borderEndWidth": undefined,
              "borderLeftColor": undefined,
              "borderLeftWidth": undefined,
              "borderRightColor": undefined,
              "borderRightWidth": undefined,
              "borderStartColor": undefined,
              "borderStartWidth": undefined,
              "borderStyle": undefined,
              "borderTopColor": undefined,
              "borderTopWidth": undefined,
              "borderWidth": undefined,
              "opacity": 0.5,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              },
              Object {
                "color": "#FFFFFF",
                "flex": 0,
                "position": "absolute",
              },
            ]
          }
        >
          <View
            accessibilityLabel="Loading indicator"
            accessibilityRole="progressbar"
            accessible={true}
            animating={true}
            animationDuration={3600}
            animationEasing={[Function]}
            color="#FFFFFF"
            hideAnimationDuration={200}
            interaction={true}
            renderComponent={[Function]}
            spinnerSize={15}
            style={
              Object {
                "height": 15,
                "opacity": 1,
                "width": 15,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                style={
                  Object {
                    "height": 15,
                    "transform": Array [
                      Object {
                        "rotate": "82.5deg",
                      },
                      Object {
                        "rotate": "0deg",
                      },
                    ],
                    "width": 15,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    Object {
                      "height": 7.5,
                      "overflow": "hidden",
                      "width": 15,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "height": 15,
                        "transform": Array [
                          Object {
                            "translateY": 0,
                          },
                          Object {
                            "rotate": "-172.5deg",
                          },
                        ],
                        "width": 15,
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      style={
                        Object {
                          "height": 7.5,
                          "overflow": "hidden",
                          "width": 15,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "borderColor": "#FFFFFF",
                            "borderRadius": 7.5,
                            "borderWidth": 1.5,
                            "height": 15,
                            "width": 15,
                          }
                        }
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                style={
                  Object {
                    "height": 15,
                    "transform": Array [
                      Object {
                        "rotate": "82.5deg",
                      },
                      Object {
                        "rotate": "0deg",
                      },
                    ],
                    "width": 15,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    Object {
                      "height": 7.5,
                      "overflow": "hidden",
                      "top": 7.5,
                      "width": 15,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "height": 15,
                        "transform": Array [
                          Object {
                            "translateY": -7.5,
                          },
                          Object {
                            "rotate": "352.5deg",
                          },
                        ],
                        "width": 15,
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      style={
                        Object {
                          "height": 7.5,
                          "overflow": "hidden",
                          "width": 15,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "borderColor": "#FFFFFF",
                            "borderRadius": 7.5,
                            "borderWidth": 1.5,
                            "height": 15,
                            "width": 15,
                          }
                        }
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <Text
          accessibilityRole="text"
          accessible={true}
          allowFontScaling={true}
          style={
            Object {
              "color": "transparent",
              "display": "flex",
              "fontFamily": "Poppins-Medium",
              "fontSize": 16.099999999999998,
              "fontWeight": "500",
              "lineHeight": 21.849999999999998,
            }
          }
          variant="btn2"
        >
          Basic loading button
        </Text>
      </View>
    </View>
  </View>,
  <View
    accessibilityHint=""
    accessibilityLabel="Loading"
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": true,
        "disabled": false,
      }
    }
    accessible={true}
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "flex-start",
        "borderRadius": undefined,
        "bottom": undefined,
        "display": "flex",
        "elevation": undefined,
        "end": undefined,
        "left": undefined,
        "margin": undefined,
        "marginBottom": undefined,
        "marginEnd": undefined,
        "marginHorizontal": undefined,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginStart": undefined,
        "marginTop": undefined,
        "marginVertical": 4,
        "position": undefined,
        "right": undefined,
        "shadowColor": undefined,
        "shadowOffset": undefined,
        "shadowOpacity": undefined,
        "shadowRadius": undefined,
        "start": undefined,
        "top": undefined,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "borderRadius": 8,
          "display": "flex",
          "overflow": "hidden",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "activeBackgroundColor": "#8F9DFF",
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 8,
              "display": "flex",
              "justifyContent": "center",
              "opacity": 0.5,
              "paddingHorizontal": 12,
              "paddingVertical": 12,
            },
            Object {
              "backgroundColor": "#6A7BFF",
              "borderBottomColor": undefined,
              "borderBottomWidth": undefined,
              "borderColor": undefined,
              "borderEndColor": undefined,
              "borderEndWidth": undefined,
              "borderLeftColor": undefined,
              "borderLeftWidth": undefined,
              "borderRightColor": undefined,
              "borderRightWidth": undefined,
              "borderStartColor": undefined,
              "borderStartWidth": undefined,
              "borderStyle": undefined,
              "borderTopColor": undefined,
              "borderTopWidth": undefined,
              "borderWidth": undefined,
              "opacity": 0.5,
            },
          ]
        }
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderRadius": undefined,
              "display": "flex",
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "justifyContent": "center",
                },
                Object {
                  "color": "#FFFFFF",
                  "flex": 0,
                },
              ]
            }
          >
            <View
              accessibilityLabel="Loading indicator"
              accessibilityRole="progressbar"
              accessible={true}
              animating={true}
              animationDuration={3600}
              animationEasing={[Function]}
              color="#FFFFFF"
              hideAnimationDuration={200}
              interaction={true}
              renderComponent={[Function]}
              spinnerSize={15}
              style={
                Object {
                  "height": 15,
                  "opacity": 1,
                  "width": 15,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 15,
                      "transform": Array [
                        Object {
                          "rotate": "82.5deg",
                        },
                        Object {
                          "rotate": "0deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 7.5,
                        "overflow": "hidden",
                        "width": 15,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "height": 15,
                          "transform": Array [
                            Object {
                              "translateY": 0,
                            },
                            Object {
                              "rotate": "-172.5deg",
                            },
                          ],
                          "width": 15,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          Object {
                            "height": 7.5,
                            "overflow": "hidden",
                            "width": 15,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "borderColor": "#FFFFFF",
                              "borderRadius": 7.5,
                              "borderWidth": 1.5,
                              "height": 15,
                              "width": 15,
                            }
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 15,
                      "transform": Array [
                        Object {
                          "rotate": "82.5deg",
                        },
                        Object {
                          "rotate": "0deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 7.5,
                        "overflow": "hidden",
                        "top": 7.5,
                        "width": 15,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "height": 15,
                          "transform": Array [
                            Object {
                              "translateY": -7.5,
                            },
                            Object {
                              "rotate": "352.5deg",
                            },
                          ],
                          "width": 15,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          Object {
                            "height": 7.5,
                            "overflow": "hidden",
                            "width": 15,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "borderColor": "#FFFFFF",
                              "borderRadius": 7.5,
                              "borderWidth": 1.5,
                              "height": 15,
                              "width": 15,
                            }
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <Text
            accessibilityRole="text"
            accessible={true}
            allowFontScaling={true}
            style={
              Object {
                "color": "#FFFFFF",
                "display": "flex",
                "fontFamily": "Poppins-Medium",
                "fontSize": 16.099999999999998,
                "fontWeight": "500",
                "lineHeight": 21.849999999999998,
                "marginLeft": 12,
              }
            }
            variant="btn2"
          >
            Loading
          </Text>
        </View>
      </View>
    </View>
  </View>,
  <View
    accessibilityHint=""
    accessibilityLabel="Loading"
    accessibilityRole="button"
    accessibilityState={
      Object {
        "busy": true,
        "disabled": false,
      }
    }
    accessible={true}
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": "flex-start",
        "borderRadius": undefined,
        "bottom": undefined,
        "display": "flex",
        "elevation": undefined,
        "end": undefined,
        "left": undefined,
        "margin": undefined,
        "marginBottom": undefined,
        "marginEnd": undefined,
        "marginHorizontal": undefined,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginStart": undefined,
        "marginTop": undefined,
        "marginVertical": 4,
        "position": undefined,
        "right": undefined,
        "shadowColor": undefined,
        "shadowOffset": undefined,
        "shadowOpacity": undefined,
        "shadowRadius": undefined,
        "start": undefined,
        "top": undefined,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "borderRadius": 8,
          "display": "flex",
          "overflow": "hidden",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "activeBackgroundColor": "#8F9DFF",
              "alignItems": "center",
              "backgroundColor": "#6A7BFF",
              "borderRadius": 8,
              "display": "flex",
              "justifyContent": "center",
              "opacity": 0.5,
              "paddingHorizontal": 12,
              "paddingVertical": 12,
            },
            Object {
              "backgroundColor": "#6A7BFF",
              "borderBottomColor": undefined,
              "borderBottomWidth": undefined,
              "borderColor": undefined,
              "borderEndColor": undefined,
              "borderEndWidth": undefined,
              "borderLeftColor": undefined,
              "borderLeftWidth": undefined,
              "borderRightColor": undefined,
              "borderRightWidth": undefined,
              "borderStartColor": undefined,
              "borderStartWidth": undefined,
              "borderStyle": undefined,
              "borderTopColor": undefined,
              "borderTopWidth": undefined,
              "borderWidth": undefined,
              "opacity": 0.5,
            },
          ]
        }
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "alignItems": "center",
              "borderRadius": undefined,
              "display": "flex",
              "flexDirection": "row",
            }
          }
        >
          <Text
            accessibilityRole="text"
            accessible={true}
            allowFontScaling={true}
            style={
              Object {
                "color": "#FFFFFF",
                "display": "flex",
                "fontFamily": "Poppins-Medium",
                "fontSize": 16.099999999999998,
                "fontWeight": "500",
                "lineHeight": 21.849999999999998,
                "marginRight": 12,
              }
            }
            variant="btn2"
          >
            Loading
          </Text>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "justifyContent": "center",
                },
                Object {
                  "color": "#FFFFFF",
                  "flex": 0,
                },
              ]
            }
          >
            <View
              accessibilityLabel="Loading indicator"
              accessibilityRole="progressbar"
              accessible={true}
              animating={true}
              animationDuration={3600}
              animationEasing={[Function]}
              color="#FFFFFF"
              hideAnimationDuration={200}
              interaction={true}
              renderComponent={[Function]}
              spinnerSize={15}
              style={
                Object {
                  "height": 15,
                  "opacity": 1,
                  "width": 15,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 15,
                      "transform": Array [
                        Object {
                          "rotate": "82.5deg",
                        },
                        Object {
                          "rotate": "0deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 7.5,
                        "overflow": "hidden",
                        "width": 15,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "height": 15,
                          "transform": Array [
                            Object {
                              "translateY": 0,
                            },
                            Object {
                              "rotate": "-172.5deg",
                            },
                          ],
                          "width": 15,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          Object {
                            "height": 7.5,
                            "overflow": "hidden",
                            "width": 15,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "borderColor": "#FFFFFF",
                              "borderRadius": 7.5,
                              "borderWidth": 1.5,
                              "height": 15,
                              "width": 15,
                            }
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 15,
                      "transform": Array [
                        Object {
                          "rotate": "82.5deg",
                        },
                        Object {
                          "rotate": "0deg",
                        },
                      ],
                      "width": 15,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 7.5,
                        "overflow": "hidden",
                        "top": 7.5,
                        "width": 15,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "height": 15,
                          "transform": Array [
                            Object {
                              "translateY": -7.5,
                            },
                            Object {
                              "rotate": "352.5deg",
                            },
                          ],
                          "width": 15,
                        }
                      }
                    >
                      <View
                        collapsable={false}
                        style={
                          Object {
                            "height": 7.5,
                            "overflow": "hidden",
                            "width": 15,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "borderColor": "#FFFFFF",
                              "borderRadius": 7.5,
                              "borderWidth": 1.5,
                              "height": 15,
                              "width": 15,
                            }
                          }
                        />
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>,
]
`;

exports[`Molecules/Button passes the snapshot test when using style props 1`] = `
<View
  accessibilityHint=""
  accessibilityLabel="Button press"
  accessibilityRole="button"
  accessibilityState={
    Object {
      "busy": false,
      "disabled": false,
    }
  }
  accessible={true}
  onLayout={[Function]}
  style={
    Object {
      "alignSelf": "flex-start",
      "borderRadius": undefined,
      "bottom": undefined,
      "display": "flex",
      "elevation": undefined,
      "end": undefined,
      "left": undefined,
      "margin": undefined,
      "marginBottom": undefined,
      "marginEnd": undefined,
      "marginHorizontal": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginStart": undefined,
      "marginTop": undefined,
      "marginVertical": 4,
      "position": undefined,
      "right": undefined,
      "shadowColor": undefined,
      "shadowOffset": undefined,
      "shadowOpacity": undefined,
      "shadowRadius": undefined,
      "start": undefined,
      "top": undefined,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "borderRadius": 8,
        "display": "flex",
        "overflow": "hidden",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "activeBackgroundColor": "#8F9DFF",
            "alignItems": "center",
            "backgroundColor": "#6A7BFF",
            "borderRadius": 8,
            "display": "flex",
            "justifyContent": "center",
            "opacity": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 12,
          },
          Object {
            "backgroundColor": "#6A7BFF",
            "borderBottomColor": undefined,
            "borderBottomWidth": undefined,
            "borderColor": "#C5CEE0",
            "borderEndColor": undefined,
            "borderEndWidth": undefined,
            "borderLeftColor": undefined,
            "borderLeftWidth": undefined,
            "borderRightColor": undefined,
            "borderRightWidth": undefined,
            "borderStartColor": undefined,
            "borderStartWidth": undefined,
            "borderStyle": undefined,
            "borderTopColor": undefined,
            "borderTopWidth": undefined,
            "borderWidth": 2,
            "opacity": 1,
          },
        ]
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        style={
          Object {
            "color": "#FFFFFF",
            "display": "flex",
            "fontFamily": "Poppins-Medium",
            "fontSize": 16.099999999999998,
            "fontWeight": "500",
            "lineHeight": 21.849999999999998,
          }
        }
        variant="btn2"
      >
        Button press
      </Text>
    </View>
  </View>
</View>
`;
